--- a/index.html
+++ b/index.html
@@ -1,13 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assingment 1</title>
-</head>
-<body>
-    
-    
-</body>
+    <link rel="stylesheet" href="styles.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&family=Work+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="header">
+      <div></div>
+
+      <div class="header-content">
+        <h1 class="header-title">All Thinks Are Possible If You believe</h1>
+        <p class="header-description">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
+        </p>
+
+        <button class="header-button">Contact Us</button>
+      </div>
+    </div>
+
+    <main>
+      <section class="section-content">
+        <div class="img-add">
+          <img src="images/person.png" alt="" class="section-img" />
+        </div>
+
+        <div class="section-details">
+          <h2 class="section-title">My failures of previous year</h2>
+          <p class="section-p">
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC,
+            making it over 2000 years old. Richard McClintock.
+          </p>
+
+          <ul class="section-list">
+            <li>
+              <span class="green-tick"
+                >Contrary to popular belief, is not simply.</span
+              >
+            </li>
+            <li>Contrary to popular belief, is not simply.</li>
+            <li>Contrary to popular belief, is not simply.</li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="my-plan">
+        <h3 class="Plan-title"><b>My Plan</b></h3>
+
+        <div class="plan-container">
+          <div class="plans">
+            <img src="images/icons/web.png" alt="" />
+            <p class="s-title">Web Devlopment</p>
+            <p class="plan-title"></p>
+            <p class="plan-descripyion">
+              Lorem ipsum dolor sit amet consectetur.
+            </p>
+          </div>
+          <div class="plans">
+            <img src="images/icons/js.png" alt="" />
+            <p class="s-title">Java Script</p>
+            <p class="plan-title"></p>
+            <p class="plan-descripyion">
+              Architecto eligendi dignissimos a laudantium recusandae!
+            </p>
+          </div>
+          <div class="plans">
+            <img src="images/icons/smoke.png" alt="" />
+            <p class="s-title">Smokings</p>
+            <p class="plan-title"></p>
+            <p class="plan-descripyion">
+              Dolorum numquam architecto nihil quasi iste?
+            </p>
+          </div>
+          <div class="plans">
+            <img src="images/icons/ecom.png" alt="" />
+            <p class="s-title">ecomerce</p>
+            <p class="plan-title"></p>
+            <p class="plan-descripyion">
+              Aliquid neque molestias doloremque voluptas nisi.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="call-now">
+        <h3 class="call-now-title">Awlays keep a positive mindset</h3>
+
+        <button class="call-button">Call Us</button>
+      </section>
+    </main>
+
+    <footer>
+      <section class="footer">
+        <div class="future">
+          <h2 class="future-title">Future</h2>
+
+          <p class="future-descripton">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words
+          </p>
+
+          <p class="future-email">Email : info@gmail.com</p>
+          <p class="future-phone">Phone : 01500 00 00 00</p>
+
+          <div class="footer-social">
+            <a href="">
+              <img src="images/icons/fb.png" alt="" />
+            </a>
+
+            <a href="">
+              <img src="images/icons/twitter.png" alt="" />
+            </a>
+
+            <a href="">
+              <img src="images/icons/youtube.png" alt="" />
+            </a>
+          </div>
+        </div>
+        <div class="Subscribe">
+          <h2 class="future-title">Subscribe</h2>
+          <form action="">
+            <input type="email" name="" id="" placeholder="Enter your email" />
+            <button class="subscribe-buton">Subscribe</button>
+          </form>
+        </div>
+      </section>
+    </footer>
+  </body>
 </html>
