--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
   </head>
   <body>
     <div class="header">
-      <div></div>
+        <nav>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">My Plan</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
 
       <div class="header-content">
         <h1 class="header-title">All Thinks Are Possible If You believe</h1>
